[package]
name = "Guess"
version = "0.1.0"
authors = ["Daniele Scasciafratte <mte90net@gmail.com>"]

[[bin]]
name = "guess"
path = "src/main.rs"

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"

[build-dependencies]
qt_ritual_build = "0.5.0"
